[REFACTOR] Refactored CSS So It Uses Responsive Measure Units

--- a/EventPlanner/src/app/auth/email/email.component.css
+++ b/EventPlanner/src/app/auth/email/email.component.css
@@ -1,5 +1,5 @@
 .example-container mat-form-field + mat-form-field {
-    margin-left: 8px;
+    margin-left: 0.5rem;
 }
 
 .example-container {
@@ -11,15 +11,15 @@ mat-form-field {
 }
 
 mat-form-field mat-label mat-icon {
-    margin-right: 8px;
+    margin-right: 0.5rem;
 }
 
 mat-form-field, mat-label, input {
     font-family: 'Raleway';
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 mat-error {
     color: #de4d3e;
-    font-size: 16px;
+    font-size: 1rem;
 }
