[FEATURE] Navigation Bar Implemented

--- a/EventPlanner/src/app/auth/login/login.component.html
+++ b/EventPlanner/src/app/auth/login/login.component.html
@@ -53,7 +53,7 @@
             <input type="submit" value="Sign in" id="submit"/>
         </form>
         <div class="signup-link">
-            Don't have an account? <a [routerLink]="'/register'">Sign up</a>
+            Don't have an account? <a routerLink="/register">Sign up</a>
         </div>
     </div>
 </div>
