--- a/EventPlanner/src/app/homepage/sections/all-products-services/all-products-services.component.css
+++ b/EventPlanner/src/app/homepage/sections/all-products-services/all-products-services.component.css
@@ -1,5 +1,4 @@
 .all-products-services-container {
-  width: 90%;
   max-width: 1200px;
   margin: 20px auto;
   height: 70vh;
@@ -19,6 +18,39 @@ h2 {
   margin-bottom: 20px;
 }
 
+.search-container {
+  position: relative;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.search-icon {
+  position: absolute;
+  left: 15px;
+  font-size: 1.5rem;
+  margin-top: 10px;
+  color: #555;
+  pointer-events: none;
+}
+
+.search-container input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 50px;
+  background-color: white;
+  color: #2c3e50;
+  font-family: 'Raleway', sans-serif;
+  transition: border-color 0.3s ease;
+  text-align: center;
+}
+
+.search-container input[type="text"]:focus {
+  outline: none;
+  border-color: #a29bfe;
+}
+
 .controls-container {
   display: flex;
   flex-wrap: wrap;
@@ -36,37 +68,6 @@ h2 {
   font-size: 1rem;
   margin-right: 10px;
   margin-left: 10px;
-}
-
-.controls-container input[type="text"] {
-  width: 20rem;
-  padding: 10px;
-  font-size: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 50px;
-  background-color: white;
-  color: #2c3e50;
-  font-family: 'Raleway', sans-serif;
-  transition: border-color 0.3s ease;
-  text-align: center;
-}
-
-.controls-container input[type="text"]:focus {
-  outline: none;
-  border-color: #a29bfe;
-}
-
-.search-container {
-  position: relative;
-}
-
-.search-icon {
-  position: absolute;
-  left: 15px;
-  font-size: 1.5rem;
-  margin-top: 10px;
-  color: #555;
-  pointer-events: none;
 }
 
 .controls-container select,
@@ -94,6 +95,23 @@ h2 {
 
 .controls-container input[type="date"]::-webkit-calendar-picker-indicator {
   cursor: pointer;
+}
+
+.radio-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin-top: 15px;
+  justify-content: center;
+}
+
+.radio-container label {
+  font-family: 'Raleway', sans-serif;
+  color: #ebebeb;
+}
+
+.radio-container input[type="radio"] {
+  margin-right: 5px;
 }
 
 .products-services-grid {
