--- a/EventPlanner/src/app/homepage/sections/top-five-events/top-five-events.component.css
+++ b/EventPlanner/src/app/homepage/sections/top-five-events/top-five-events.component.css
@@ -48,6 +48,7 @@ h2, h3 {
 
 h2 {
     margin: 10px 0;
+    padding: 20px;
     font-size: 2.5em;
     font-weight: bold;
     text-align: center;
@@ -62,6 +63,7 @@ h3 {
 p {
     font-family: 'Raleway', sans-serif;
     margin: 5px 0;
+    margin-bottom: 20px;
     font-size: 1em;
     color: #555;
 }
