--- a/EventPlanner/src/app/homepage/sections/top-five-products-services/top-five-products-services.component.css
+++ b/EventPlanner/src/app/homepage/sections/top-five-products-services/top-five-products-services.component.css
@@ -47,6 +47,7 @@ h2, h3 {
 }
 
 h2 {
+    padding: 20px;
     margin: 10px 0;
     font-size: 2.5em;
     font-weight: bold;
@@ -62,6 +63,7 @@ h3 {
 p {
     font-family: 'Raleway', sans-serif;
     margin: 5px 0;
+    margin-bottom: 20px;
     font-size: 1em;
     color: #555;
 }
