--- a/EventPlanner/src/app/shared/navbar/navbar.component.html
+++ b/EventPlanner/src/app/shared/navbar/navbar.component.html
@@ -4,43 +4,43 @@
       <img src="../../../assets/favicon.ico" alt="Logo" />
       <h3>Event Planner</h3>
     </div>
-    <div class="nav-user">
-      <img src="../../../assets/images/johndoe.jpg" alt="User Image" />
-      <h4>John Doe</h4>
-      <span>johndoe&#64;gmail.com</span>
+    <div class="nav-user" *ngIf="isLoggedIn">
+      <img [src]="userProfilePhoto || '../../../assets/images/profile_photo_placeholder.png'" alt="User Image" />
+      <h4>{{ userFullName }}</h4>
+      <span>{{ userEmail }}</span>
     </div>
-    <a class="nav-login" routerLink="/login">
+    <a class="nav-login" routerLink="/login" *ngIf="!isLoggedIn">
       Sign in
     </a>
     <a class="nav-item top-border" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
       <mat-icon>home</mat-icon>
       Home
     </a>
-    <a class="nav-item" routerLink="/chat" routerLinkActive="active">
+    <a class="nav-item" routerLink="/chat" routerLinkActive="active" *ngIf="isLoggedIn">
       <mat-icon>chat</mat-icon>
       Chat
     </a>
-    <a class="nav-item" routerLink="/notifications" routerLinkActive="active">
+    <a class="nav-item" routerLink="/notifications" routerLinkActive="active" *ngIf="isLoggedIn">
       <mat-icon>notifications</mat-icon>
       Notifications
     </a>
-    <a class="nav-item" routerLink="/events" routerLinkActive="active">
+    <a class="nav-item" routerLink="/events" routerLinkActive="active" *ngIf="userRole === 'Event Organizer'">
       <mat-icon>event</mat-icon>
       Events
     </a>
-    <a class="nav-item" routerLink="/services" routerLinkActive="active">
+    <a class="nav-item" routerLink="/services" routerLinkActive="active" *ngIf="userRole === 'Service Product Provider'">
       <mat-icon>build</mat-icon>
       Services
     </a>
-    <a class="nav-item" routerLink="/products" routerLinkActive="active">
+    <a class="nav-item" routerLink="/products" routerLinkActive="active" *ngIf="userRole === 'Service Product Provider'">
       <mat-icon>shopping_cart</mat-icon>
       Products
     </a>
-    <a class="nav-item" routerLink="/profile" routerLinkActive="active">
+    <a class="nav-item" routerLink="/profile" routerLinkActive="active" *ngIf="isLoggedIn">
       <mat-icon>person</mat-icon>
       Profile
     </a>
-    <a class="nav-item" routerLink="/logout" routerLinkActive="active">
+    <a class="nav-item" routerLink="/logout" routerLinkActive="active" *ngIf="isLoggedIn" (click)="logout()">
       <mat-icon>logout</mat-icon>
       Sign Out
     </a>
