--- a/EventPlanner/src/app/event-manager/invited-events/invited-events.component.html
+++ b/EventPlanner/src/app/event-manager/invited-events/invited-events.component.html
@@ -1,7 +1,7 @@
 <div class="invited-events-container">
     <h2 class="section-title">Invited Events</h2>
   
-    <div *ngIf="filteredEvents.length > 0 && !loading" class="events-grid">
+    <div *ngIf="events.length > 0 && !loading" class="events-grid">
       <app-event-card
         *ngFor="let event of paginatedEvents"
         [event]="event"
@@ -9,7 +9,7 @@
       ></app-event-card>
     </div>
   
-    <div *ngIf="!filteredEvents?.length && !loading" class="no-events">
+    <div *ngIf="!events?.length && !loading" class="no-events">
       <p>No invited events available at the moment.</p>
     </div>
   
