--- a/EventPlanner/src/app/details/product-details/product-details.component.css
+++ b/EventPlanner/src/app/details/product-details/product-details.component.css
@@ -1,4 +1,4 @@
-.product-service-details-container {
+.product-details-container {
     width: 80%;
     max-width: 900px;
     margin: 20px auto;
@@ -8,7 +8,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
-  .product-service-image {
+  .product-image {
     width: 100%;
     max-height: 400px;
     overflow: hidden;
@@ -16,13 +16,13 @@
     margin-bottom: 20px;
   }
   
-  .product-service-image img {
+  .product-image img {
     width: 100%;
     height: auto;
     object-fit: cover;
   }
   
-  .product-service-info {
+  .product-info {
     padding: 20px;
   }
   
@@ -32,13 +32,7 @@
     color: #3f3f3f;
   }
   
-  .product-service-price {
-    font-size: 1.5em;
-    color: #26c067;
-    margin: 10px 0;
-  }
-  
-  .product-service-description {
+  .product-description {
     font-family: 'Raleway', sans-serif;
     font-size: 1.1em;
     color: #333;
