--- a/EventPlanner/src/app/homepage/sections/all-products-services/all-products-services.component.css
+++ b/EventPlanner/src/app/homepage/sections/all-products-services/all-products-services.component.css
@@ -35,7 +35,7 @@ h2 {
 
 .search-container input[type="text"] {
   width: 100%;
-  padding: 10px;
+  padding: 10px 50px;
   font-size: 1rem;
   border: 1px solid #ccc;
   border-radius: 50px;
@@ -43,7 +43,6 @@ h2 {
   color: #2c3e50;
   font-family: 'Raleway', sans-serif;
   transition: border-color 0.3s ease;
-  text-align: center;
 }
 
 .search-container input[type="text"]:focus {
@@ -147,8 +146,8 @@ h2 {
   cursor: pointer;
   transition: background-color 0.3s;
   font-size: 1.5rem;
-  width: 50px;
-  height: 50px;
+  width: 65px;
+  height: 65px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -163,8 +162,8 @@ h2 {
   color: white;
   padding: 10px;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  width: 65px;
+  height: 65px;
   display: flex;
   justify-content: center;
   align-items: center;
