--- a/EventPlanner/src/app/homepage/sections/top-five-products-services/top-five-products-services.component.css
+++ b/EventPlanner/src/app/homepage/sections/top-five-products-services/top-five-products-services.component.css
@@ -12,7 +12,7 @@
     transition: transform 0.5s ease;
 }
 
-.product-item {
+.product-service-item {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,7 +23,7 @@
     transition: transform 0.5s ease, opacity 0.5s ease;
 }
 
-.product-item img {
+.product-service-item img {
     width: 65%;
     height: 65%;
     object-fit: cover;
@@ -31,12 +31,12 @@
     margin-bottom: 15px;
 }
 
-.product-item.focused {
+.product-service-item.focused {
     transform: scale(1.1);
     opacity: 1;
 }
 
-.product-item.adjacent {
+.product-service-item.adjacent {
     transform: scale(0.9);
     opacity: 0.7;
 }
