--- a/EventPlanner/src/app/cards/product-card/product-card.component.html
+++ b/EventPlanner/src/app/cards/product-card/product-card.component.html
@@ -1,6 +1,6 @@
 <div class="product-card" (click)="onCardClick()">
     <div class="product-image">
-      <img [src]="product.image" [alt]="product.name" />
+      <img [src]="product.images" [alt]="product.name" />
     </div>
     <div class="product-info">
       <h3>{{ product.name }}</h3>
